# web-osiptel

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  mise.toml  oxfmt.config.ts  oxlint.config.ts  package.json  readme.md
.github/: CODEOWNERS
.github/workflows/: codeql.yml  web-quality.yml  web-test.yml  web.yml
apps/robot/: .env.example  pyproject.toml
apps/robot/robot/: api.py  crypto.py  db.py  pool.py  worker.py
apps/robot/robot/app/: __init__.py
apps/robot/robot/domain/: __init__.py  types.py
apps/robot/robot/obs/: logging.py
apps/robot/robot/pipeline/: messages.py  retry_control.py
apps/robot/robot/providers/: __init__.py  geonode.py
apps/web/: .gitignore  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: app.css  entry-server.tsx  global.d.ts  middleware.ts
apps/web/src/actions/admin/: queries.ts  users.ts
apps/web/src/actions/auth/: login.ts  logout.ts
apps/web/src/actions/jobs/: queries.ts  upload.ts
apps/web/src/actions/settings/: queries.ts  save.ts  verify-phone.ts
apps/web/src/components/: job-badge.tsx  logo.tsx  page-header.tsx  webgl-swirl.tsx
apps/web/src/components/ui/: badge.module.css  badge.tsx  button.module.css  button.tsx  card.module.css  card.tsx  empty-state.tsx  input.module.css  input.tsx  progress-bar.tsx  select.module.css  select.tsx
apps/web/src/lib/: env.ts  result.ts
apps/web/src/lib/auth/: password.ts  rbac.ts  session.ts
apps/web/src/lib/crypto/: credentials.ts
apps/web/src/routes/: (app).tsx  (public).tsx  index.tsx
apps/web/src/workers/: runner.ts
apps/web/tests/support/: global-setup.ts  vitest-setup.ts
services/robot/: .env.example  .gitignore  mise.toml  pyproject.toml  readme.md  robot.spec
services/robot/robot/: __main__.py  api.py  main.py
services/robot/robot/app/: cli.py  config.py  run.py
services/robot/robot/domain/: errors.py  retry.py  types.py
services/robot/robot/io/: __init__.py  checkpoint.py  writer.py
services/robot/robot/obs/: __init__.py  events.py
services/robot/robot/pipeline/: __init__.py  attempt.py  dispatcher.py  lookup_executor.py  reader.py  session_runtime.py  settings.py  worker.py
services/robot/robot/providers/: __init__.py  geonode.py  osiptel_browser.py  osiptel_flow.py  osiptel_http.py
(+52 files in other folders)
